--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -9,6 +9,16 @@ padding-top: 60px;
 padding-bottom: 60px;
 }
 
+
+jga .navbar-default {
+    background-color: gray;
+    border-color: gray;
+}
+
+.jga .navbar-default .navbar-brand {
+    color: white;
+}
+
 nav.navbar.navbar-default.navbar-fixed-top{
 padding-right: 15px;
 }
@@ -19,8 +29,8 @@ padding-right: 15px;
 
 
 .navbar-default {
-background-color: gray;
-border-color: gray;
+    background-color: gray;
+    border-color: gray;
 }
 
 .navbar-default .navbar-brand{
@@ -113,4 +123,24 @@ padding-bottom: 75%;
 
 .embed-responsive-16by9 > .wd-widgets > .wd-widgets-toolbar{
 margin-right: -15px;
+}
+
+.jga .jga-split-view-left {
+    position: absolute;
+    top: 60px;
+    bottom: 0px;
+    z-index: 1;
+    overflow-y: scroll;
+}
+
+
+@media (min-width: 1200px) {
+    .col-lg-9.jga-split-view-right {
+        width: 75%;
+        position: absolute;
+        right: 0px;
+        overflow-y: scroll;
+        top: 60px;
+        bottom: 0px;
+    }
 }
