--- a/public/assignment/user/templates/profile.html
+++ b/public/assignment/user/templates/profile.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-<title>Title</title>
 
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-<link href="../css/style.css" rel="stylesheet"/>
-</head>
-<body>
 
     <!--<nav class="navbar navbar-default navbar-fixed-top">-->
         <!--<div class="container-fluid">-->
@@ -55,19 +44,19 @@
 <form>
 <div class="form-group">
     <label for="username">Username</label>
-    <input type="text" class="form-control" id="username" placeholder="vaibhav">
+    <input type="text" ng-model="model.user.username" class="form-control" id="username" placeholder="vaibhav">
 </div>
 <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="vaibhav@gmail.com">
+    <input type="email" ng-model="model.user.email" class="form-control" id="email" placeholder="vaibhav@gmail.com">
 </div>
 <div class="form-group">
     <label for="first-name">First Name</label>
-    <input type="text" class="form-control" id="first-name" placeholder="vaibhav">
+    <input type="text" ng-model="model.user.firstName" class="form-control" id="first-name" placeholder="vaibhav">
 </div>
 <div class="form-group">
     <label for="last-name">Last Name</label>
-    <input type="text" class="form-control" id="last-name" placeholder="karnam">
+    <input type="text" ng-model="model.user.lastName" class="form-control" id="last-name" placeholder="karnam">
 </div>
 
     <div class="form-group">
@@ -80,11 +69,18 @@
 </form>
 
 <a class="btn btn-primary btn-block"
-href="../website/website-list.html">
+   href="#!/user/{{model.user._id}}/website">
 Websites</a>
 <a class="btn btn-danger  btn-block"
-href="login.html">
+   href="#!/login">
 Logout</a>
+        <a class="btn btn-default btn-danger btn-block"
+           ng-click="model.unregister()"
+           role="button">Unregister</a>
+
+        <a class="btn btn-default btn-primary btn-block"
+           ng-click="model.updateUser()"
+           role="button">Update</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -97,5 +93,3 @@ Logout</a>
 </div>
 </nav>
 
-</body>
-</html>
