assignment3 user working

--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <p class="navbar-text pull-right">
-                <a href="profile.html" class="navbar-link">
+                <a href="profile.view.client.html" class="navbar-link">
       <span class="glyphicon glyphicon-ok">
       </span>
                 </a>
