--- a/public/assignment/views/page/page-new.html
+++ b/public/assignment/views/page/page-new.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <title>Title</title>
-<link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-<link href="../css/style.css" rel="stylesheet"/>
+<link href="../../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -35,7 +35,7 @@ Title</label>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../user/templates/profile.html" class="navbar-link">
+<a href="../user/templates/profile.view.client.html" class="navbar-link">
     <span class="glyphicon glyphicon-user"></span>
 </a>
 </p>
