--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -1,9 +1,6 @@
 
 <div class="container-fluid">
-    <div ng-show="model.user" class="alert alert-info">
-        Welcome back {{model.user.username}}
-    </div>
-
+    <div ng-show="model.message" class="alert alert-info">{{model.message}}</div>
     <div ng-show="model.errorMessage" class="alert alert-danger">
         {{model.errorMessage}}
     </div>
