--- a/public/assignment/views/website/website-list.html
+++ b/public/assignment/views/website/website-list.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <title>Title</title>
-<link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-<link href="../css/style.css" rel="stylesheet"/>
+<link href="../../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="../../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-<a href="../user/templates/profile.html" class="navbar-link">
+<a href="../user/templates/profile.view.client.html" class="navbar-link">
 <span class="glyphicon glyphicon-chevron-left"></span>
 </a>
 <a href="#">Websites</a>
@@ -79,7 +79,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../user/templates/profile.html" class="navbar-link">
+<a href="../user/templates/profile.view.client.html" class="navbar-link">
     <span class="glyphicon glyphicon-user"></span>
 </a>
 </p>
