--- a/public/assignment/views/page/page-list.html
+++ b/public/assignment/views/page/page-list.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-<a href="../website/website-list.html" class="navbar-link">
+<a href="../website/templates/website-list.view.client.html" class="navbar-link">
 <span class="glyphicon glyphicon-chevron-left"></span>
 </a>
 <a href="#">
