--- a/public/assignment/views/widget/widget-list.html
+++ b/public/assignment/views/widget/widget-list.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-<a href="../page/page-list.html" class="navbar-link">
+<a href="../page/templates/page-list.view.client.html" class="navbar-link">
     <span class="glyphicon glyphicon-chevron-left"></span></a>
 <a href="#">
     Widgets</a>
