--- a/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
-    <div class="embed-responsive embed-responsive-16by9">
-        <iframe width={{widget.width}} src="{{model.getYouTubeEmbedUrl(widget.url)}}" frameborder="0" allowfullscreen></iframe>
-            <div class="wd-widgets-toolbar pull-right">
-                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
-                    <span class="glyphicon glyphicon-cog"></span>
-                </a>
-                <span class="glyphicon glyphicon-align-justify"></span>
-            </div>
-    </div>
+<div class="embed-responsive embed-responsive-16by9">
+<iframe width={{widget.width}} src="{{model.getYouTubeEmbedUrl(widget.url)}}"
+        frameborder="0" allowfullscreen></iframe>
+<div class="wd-widgets-toolbar pull-right">
+<a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+<span class="glyphicon glyphicon-cog"></span></a>
+<span class="glyphicon glyphicon-align-justify"></span>
+</div>
+</div>
 </div>
