--- a/public/assignment/views/widget/templates/widget-heading.view.client.html
+++ b/public/assignment/views/widget/templates/widget-heading.view.client.html
@@ -1,10 +1,23 @@
 <div class="container-fluid">
-<div ng-model="model.widget.size" ng-switch="widget.size">
-    <h1 ng-switch-when="1">{{widget.text}}</h1>
-    <h2 ng-switch-when="2">{{widget.text}}</h2>
-    <h3 ng-switch-when="3">{{widget.text}}</h3>
-    <h4 ng-switch-when="4">{{widget.text}}</h4>
-    <h5 ng-switch-when="5">{{widget.text}}</h5>
-    <h6 ng-switch-when="6">{{widget.text}}</h6>
+<div ng-model="model.widget.size"
+     ng-switch="widget.size">
+    <h1 ng-switch-when="1">
+        {{widget.text}}
+    </h1>
+    <h2 ng-switch-when="2">
+        {{widget.text}}
+    </h2>
+    <h3 ng-switch-when="3">
+        {{widget.text}}
+    </h3>
+    <h4 ng-switch-when="4">
+        {{widget.text}}
+    </h4>
+    <h5 ng-switch-when="5">
+        {{widget.text}}
+    </h5>
+    <h6 ng-switch-when="6">
+        {{widget.text}}
+    </h6>
 </div>
 </div>
