--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -20,12 +20,24 @@ Widgets</a>
     </a>
     <span class="glyphicon glyphicon-align-justify"></span>
 </div>
-<div ng-include="model.widgetUrl(widget)"></div>
+    <div ng-switch="widget.widgetType">
+    <div ng-switch-when="HEADING">
+    <div ng-include="'views/widget/templates/widget-heading.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="IMAGE">
+    <div ng-include="'views/widget/templates/widget-image.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="YOUTUBE">
+        <div ng-include="'views/widget/templates/widget-youtube.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="HTML" ng-bind-html="model.trust(widget.text)">
+    </div>
+    </div>
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../../user/templates/profile.view.client.html" class="navbar-link">
+<a href="#!/user/{{model.userId}}" class="navbar-link">
 <span class="glyphicon glyphicon-user"></span></a>
 </p>
 </div>
