--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -86,7 +86,7 @@ Logout</a>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-    <a href="../user/profile.html" class="navbar-link">
+    <a href="#!/profile/{{model.userId}}" class="navbar-link">
         <span class="glyphicon glyphicon-user"></span>
     </a>
 </p>
