--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -26,7 +26,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
     <p class="navbar-text pull-right">
-        <a href="#!/user/{{model.userId}}" class="navbar-link">
+        <a href="#!/profile/{{model.userId}}" class="navbar-link">
             <span class="glyphicon glyphicon-user"></span></a>
     </p>
 </div>
