--- a/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -2,10 +2,13 @@
 <div class="embed-responsive embed-responsive-16by9">
 <iframe width={{widget.width}} src="{{model.getYouTubeEmbedUrl(widget.url)}}"
         frameborder="0" allowfullscreen></iframe>
-<div class="wd-widgets-toolbar pull-right">
+<div class="wd-widgets">
+<div class="wd-widgets-toolbar">
 <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
-<span class="glyphicon glyphicon-cog"></span></a>
+        <span class="glyphicon glyphicon-cog"></span>
+</a>
 <span class="glyphicon glyphicon-align-justify"></span>
+</div>
 </div>
 </div>
 </div>
