--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -4,6 +4,11 @@ select.form-control{
 margin-bottom: 5px;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
 padding-top: 60px;
 padding-bottom: 60px;
@@ -20,12 +25,10 @@ color: white;
 }
 
 nav.navbar.navbar-default.navbar-fixed-top{
-padding-right: 15px;
     background-color: gray;
 }
 
 nav.navbar.navbar-default.navbar-fixed-bottom{
-padding-right: 15px;
     background-color: gray;
 }
 
@@ -45,7 +48,7 @@ color: white;
 
 .navbar-header{
 width: 100%;
-padding-right: 15px;
+padding-right: 30px;
 background-color: gray;
 }
 
