--- a/public/assignment/views/website/templates/website-list.view.client.html
+++ b/public/assignment/views/website/templates/website-list.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-<a href="#!/user/{{model.userId}}" class="navbar-link">
+<a href="#!/profile/{{model.userId}}" class="navbar-link">
 <span class="glyphicon glyphicon-chevron-left"></span>
 </a>
 <a href="#!/user/{{model.userId}}/website">Websites</a>
@@ -49,7 +49,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../../user/templates/profile.view.client.html" class="navbar-link">
+<a href="#!/profile/{{model.userId}}" class="navbar-link">
 <span class="glyphicon glyphicon-user"></span>
 </a>
 </p>
