--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -64,6 +64,8 @@ width: 100%;
 .wd-widgets > img{
 width: 100%;
 padding-bottom: 10px;
+margin-top: 10px;
+margin-bottom: 10px;
 }
 
 .wd-widgets > .wd-widgets-toolbar{
