--- a/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-<<a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="navbar-link">
+<a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="navbar-link">
 <span class="glyphicon glyphicon-chevron-left"></span></a>
 <a href="#">
 Choose Widget</a>
