assignemnt 3 bug fixes

--- a/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div id = "youtube" class="container-fluid">
 <div class="embed-responsive embed-responsive-16by9">
 <iframe width={{widget.width}} src="{{model.getYouTubeEmbedUrl(widget.url)}}"
         frameborder="0" allowfullscreen></iframe>
