--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -56,6 +56,9 @@ background-color: gray;
 color: white;
 }
 
+img{
+    margin-top: 10px;
+}
 
 .row.navbar-text{
 width: 100%;
@@ -119,6 +122,10 @@ left: 0;
 width: 100%;
 height: 100%;
 border: 0;
+}
+
+#youtube{
+margin-top: 10px;
 }
 
 .embed-responsive-16by9 {
