--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -1,6 +1,4 @@
-
-
-    <!--<nav class="navbar navbar-default navbar-fixed-top">-->
+<!--<nav class="navbar navbar-default navbar-fixed-top">-->
         <!--<div class="container-fluid">-->
             <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
             <!--<div class="navbar-header">-->
@@ -22,8 +20,7 @@
             <!--</div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;-->
         <!--</div>&lt;!&ndash; /.container-fluid &ndash;&gt;-->
     <!--</nav>-->
-
-    <nav class="navbar navbar-default navbar-fixed-top">
+ <nav class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-header">
             <div class="navbar-brand">
                 <a href="#">
@@ -31,7 +28,7 @@
                 </a>
             </div>
             <p class="navbar-text pull-right">
-                <a href="profile.view.client.html" class="navbar-link">
+                <a ng-click="model.updateUser(user)" class="navbar-link">
       <span class="glyphicon glyphicon-ok">
       </span>
                 </a>
@@ -39,8 +36,7 @@
         </div>
     </nav>
 
-
-    <div class="container-fluid">
+<div class="container-fluid">
 <form>
 <div class="form-group">
     <label for="username">Username</label>
@@ -62,6 +58,7 @@
     <div class="form-group">
     <label for="dob">Date of Birth</label>
     <input name="dob"
+           ng-model="model.user.dob"
            type="date"
            class="form-control"
            id="dob"/>
@@ -79,7 +76,7 @@ Logout</a>
            role="button">Unregister</a>
 
         <a class="btn btn-default btn-primary btn-block"
-           ng-click="model.updateUser()"
+           ng-click="model.updateUser(user)"
            role="button">Update</a>
 </div>
 
