--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -14,6 +14,11 @@ padding-top: 60px;
 padding-bottom: 60px;
 }
 
+#flickr
+{
+margin-top: 5px;
+}
+
 
 jga .navbar-default {
 background-color: gray;
