--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -6,7 +6,7 @@
     <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
-    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/{{model.websiteId}}/page/{{model.pageId}}" class="hidden-xs">Websites</a>
+    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/{{model.websiteId}}/page/{{model.pageId}}" class="hidden-xs">Pages</a>
 </div>
 <p class="navbar-text pull-right">
     <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/new" class="navbar-link">
