--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -76,7 +76,7 @@ Logout</a>
            role="button">Unregister</a>
 
         <a class="btn btn-default btn-primary btn-block"
-           ng-click="model.updateUser(user)"
+           ng-click="model.updateUser()"
            role="button">Update</a>
 </div>
 
