--- a/public/assignment/views/widget/editor/widget-image.view.client.html
+++ b/public/assignment/views/widget/editor/widget-image.view.client.html
@@ -22,7 +22,7 @@ Width</label>
 <button type="submit"  multiple type="file"  class="btn btn-block btn-primary">Upload Image</button>
 </form>
 
-<a id = "searchButton" href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{model.widgetId}}/flickr" class="btn btn-block btn-success form-control">
+<a id="flickr" href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{model.widgetId}}/flickr" class="btn btn-block btn-success form-control">
 Search Flickr
 </a>
 
