--- a/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -23,15 +23,11 @@ Choose Widget</a>
 Image</a>
 </li>
 <li class="list-group-item">
-<a href="widget-image.view.client.html">
-    Label</a>
-</li>
-<li class="list-group-item">
-<a href="widget-image.view.client.html">
+    <a ng-click= "model.createWidgetHTML(widget)" class="navbar-link">
     HTML</a>
 </li>
 <li class="list-group-item">
-<a href="widget-image.view.client.html">
+    <a ng-click= "model.createWidgetText(widget)" class="navbar-link">
     Text</a>
 </li>
 </ul>
