--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -1,33 +1,39 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
-    <div class="navbar-brand">
-        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="navbar-link">
-        <span class="glyphicon glyphicon-chevron-left"></span></a>
-        <a href="#">
-            Edit Widget</a></div>
-    <p class="navbar-text pull-right">
-        <a ng-click = "model.widgetUpdate(model.widget)" class="navbar-link">
+<div class="navbar-brand">
+    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget" class="navbar-link">
+    <span class="glyphicon glyphicon-chevron-left"></span></a>
+    <a href="#">
+        Edit Widget</a></div>
+<p class="navbar-text pull-right">
+    <a ng-click = "model.widgetUpdate(model.widget)" class="navbar-link">
 <span class="glyphicon glyphicon-ok">
 </span></a>
-    </p>
+</p>
 </div>
 </nav>
-<div ng-switch="model.widget.widgetType">
+<div ng-switch="model.widget.type">
 <div ng-switch-when="HEADING">
-    <div ng-include="'views/widget/editor/widget-heading.view.client.html'"></div>
+<div ng-include="'views/widget/editor/widget-heading.view.client.html'"></div>
 </div>
 <div ng-switch-when="IMAGE">
-    <div ng-include="'views/widget/editor/widget-image.view.client.html'"></div>
+<div ng-include="'views/widget/editor/widget-image.view.client.html'"></div>
 </div>
 <div ng-switch-when="YOUTUBE">
-    <div ng-include="'views/widget/editor/widget-youtube.view.client.html'"></div>
+<div ng-include="'views/widget/editor/widget-youtube.view.client.html'"></div>
+</div>
+<div ng-switch-when="TEXT">
+    <div ng-include="'views/widget/editor/widget-text.view.client.html'"></div>
+</div>
+<div ng-switch-when="HTML">
+    <div ng-include="'views/widget/editor/widget-html.view.client.html'"></div>
 </div>
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
-    <p class="navbar-text pull-right">
-        <a href="#!/profile/{{model.userId}}" class="navbar-link">
-            <span class="glyphicon glyphicon-user"></span></a>
-    </p>
+<p class="navbar-text pull-right">
+    <a href="#!/profile/{{model.userId}}" class="navbar-link">
+        <span class="glyphicon glyphicon-user"></span></a>
+</p>
 </div>
 </nav>
