--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -13,7 +13,7 @@ Widgets</a>
 </p>
 </div>
 </nav>
-<div wbdvsortable callback="model.widgetsSort(InitalPosition, FinalPosition)">
+<div wbdvsortable callback="model.widgetsSort(Inital, Final)">
 <div ng-repeat="widget in model.widgets" class="wd-widgets">
 <div class="wd-widgets-toolbar">
     <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
@@ -21,7 +21,7 @@ Widgets</a>
     </a>
     <span class="glyphicon glyphicon-align-justify"></span>
 </div>
-    <div ng-switch="widget.widgetType">
+    <div ng-switch="widget.type">
     <div ng-switch-when="HEADING">
     <div ng-include="'views/widget/templates/widget-heading.view.client.html'"></div>
     </div>
@@ -32,6 +32,9 @@ Widgets</a>
         <div ng-include="'views/widget/templates/widget-youtube.view.client.html'"></div>
     </div>
     <div class="container-fluid" ng-switch-when="HTML" ng-bind-html="model.trust(widget.text)">
+    </div>
+    <div ng-switch-when="TEXT">
+     <div ng-include="'views/widget/templates/widget-text.view.client.html'"></div>
     </div>
     </div>
 </div>
