--- a/public/assignment/views/widget/templates/widget-text.view.client.html
+++ b/public/assignment/views/widget/templates/widget-text.view.client.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div id ="text" class="container-fluid">
 <div ng-if="widget.formatted"
      text-angular ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough']]">
 
